[package]
name = "server-language-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1.18", features = ["rt-multi-thread", "io-util", "macros", "net", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
chashmap = "2"
lazy_static = "1"
rand = "0.8"
bincode = "1"
indicatif = "0.16"
zstd = "0.11.2+zstd.1.5.2"
flume = { version = "0.10" }
thiserror = "1"
comfy-table = "5.0.1"
parse_duration = "2.1.1"
async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
# console-subscriber = "0"


[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[profile.release]
# lto = true
